Attempt to fix index.html and contact page image alignment

--- a/css/main.css
+++ b/css/main.css
@@ -494,12 +494,11 @@ small{
    ========================================================================== */
 
 @media only screen and (min-width: 1024px){
-    .hiddenedesktop{
-        display: none !important;
-    }
+
 }
 
 @media only screen and (max-width: 1200px){
+    
     .gallery{
         width: 800px;
     }
@@ -514,9 +513,6 @@ small{
 
 @media only screen and (max-width: 1024px){
 
-    .hiddenedevice{
-        display: none !important;
-    }
     .wrapper{
         padding: 0 1em;
     }
@@ -623,14 +619,15 @@ small{
 
     .b-contact{
         width: 100%;
-        flex-wrap: wrap;
+        display: block;
+        padding: 2rem 0;
     }
     .contact-image{
         margin: 0;
-        flex: 0 0 100%;
+        margin-bottom: 3rem;
+        max-width: 400px;
     }
     .contact-info{
-        flex: 0 0 100%;
     }
 
 }
